// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-validation - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Pre-deployment validation for Azure resources including naming constraints, Bicep validation, subscription filtering, and quota checks. Ensures deployments succeed by catching naming errors, character limits, and configuration issues before they fail mid-deployment.",
  "extractedKeywords": [
    "app service",
    "authentication",
    "azure",
    "before",
    "bicep",
    "catching",
    "character",
    "checks",
    "configuration",
    "constraints",
    "container",
    "cosmos",
    "deploy",
    "deployments",
    "ensures",
    "errors",
    "fail",
    "filtering",
    "function",
    "including",
    "issues",
    "key vault",
    "keyvault",
    "limits",
    "mcp",
    "mid-deployment",
    "naming",
    "pre-deployment",
    "quota",
    "resources",
    "storage",
    "subscription",
    "succeed",
    "terraform",
    "they",
    "validation",
  ],
  "name": "azure-validation",
}
`;

exports[`azure-validation - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "authentication",
  "azure",
  "before",
  "bicep",
  "catching",
  "character",
  "checks",
  "configuration",
  "constraints",
  "container",
  "cosmos",
  "deploy",
  "deployments",
  "ensures",
  "errors",
  "fail",
  "filtering",
  "function",
  "including",
  "issues",
  "key vault",
  "keyvault",
  "limits",
  "mcp",
  "mid-deployment",
  "naming",
  "pre-deployment",
  "quota",
  "resources",
  "storage",
  "subscription",
  "succeed",
  "terraform",
  "they",
  "validation",
]
`;
